fixing css to prevent notices from overlapping the logo

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -35,6 +35,10 @@
     display: inline;
 }
 
+.hoo-head .updated {
+    clear: left;
+}
+
 #wphead {
     border-bottom: none;
 }
